--- a/CowsBulls/index.html
+++ b/CowsBulls/index.html
@@ -1,17 +1,59 @@
 <html>
 
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
     <div class="container">
         <h1>
             Cows and Bulls
         </h1>
-        <h3>
-            Guess the number
-        </h3>
         <div class="answer-form">
-            <input type="text">      
+            <span class="answer-form__question">
+            Guess the number
+        </span>
+            <input class="answer-form__input" type="text" placeholder="1234" />
+        </div>
+        <div class="result">
+            <div class="result__el">
+
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
+            <div class="result__el">
+            </div>
         </div>
     </div>
-</body> 
+
+</body>
 
 </html>
