--- a/CowsBulls/index.html
+++ b/CowsBulls/index.html
@@ -1,7 +1,7 @@
 <html>
-
+<title>Cows and Bulls</title>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         </div>
         <div class="result">
             <div class="result__el">
-
+                <span class="result__num">1234 </span> <span class="result__cow"></span><span class="result__bull"></span> <span class="result__cow"></span><span class="result__bull"></span>
             </div>
             <div class="result__el">
             </div>
