--- a/CowsBulls/index.html
+++ b/CowsBulls/index.html
@@ -2,6 +2,7 @@
 <title>Cows and Bulls</title>
 <head>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -15,6 +16,7 @@
         </span>
             <input class="answer-form__input" type="text" placeholder="1234" />
         </div>
+        
         <div class="result">
             <div class="result__el">
                 <span class="result__num">1234 </span> <span class="result__cow"></span><span class="result__bull"></span> <span class="result__cow"></span><span class="result__bull"></span>
