--- a/CowsBulls/index.html
+++ b/CowsBulls/index.html
@@ -19,44 +19,11 @@
         </div>
 
         <div class="result">
-            <div class="result__el">
-                <span class="result__num">1234 </span> <span class="result__cow"></span><span class="result__bull"></span> <span class="result__cow"></span><span class="result__bull"></span>
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
-            <div class="result__el">
-            </div>
+
         </div>
     </div>
 
 </body>
+<script src="js/main.js"></script>
 
 </html>
