--- a/CowsBulls/index.html
+++ b/CowsBulls/index.html
@@ -15,7 +15,9 @@
             <span class="answer-form__question">
             Guess the number
         </span>
-            <input class="answer-form__input" type="text" placeholder="1234" />
+            <form class="answer-form__form">
+                <input class="answer-form__input" type="number" min="1000" max="9999" placeholder="1234" />
+            </form>
         </div>
 
         <div class="result">
