--- a/CowsBulls/index.html
+++ b/CowsBulls/index.html
@@ -12,18 +12,19 @@
             Cows and Bulls
         </h1>
         <div class="answer-form">
-            <span class="answer-form__question">
+            <!--span class="answer-form__question">
             Guess the number
-        </span>
+        </span-->
             <form class="answer-form__form">
-                <input class="answer-form__input" type="number" min="1000" max="9999" placeholder="1234" />
+                <input class="answer-form__input" required type="number" min="1000" max="9999" placeholder="1234" />
+                <input type="submit" value="Check number">
             </form>
         </div>
 
         <div class="result">
             <div class="rules">
                 <p> I have 4-digit secret number. <br> <br>You can try to guess it, just print your version in input field.<br> <br> I'll give you some hint, what is my number. If the matching digits are in their right positions, they are <b> "bulls"</b>,
-                    if in different positions, they are <b>"cows"</b>. <br> <br>Example: <br>Secret number: 4271 <br> Your try: 1234 <br><br> Answer: 1 bull and 2 cows. (The bull is "2", the cows are "4" and "1".) <br><br>Have fun!
+                    if in different positions, they are <b>"cows"</b> . <br> <br>Example: <br>Secret number: 4271 <br> Your try: 1234 <br><br> Answer: 1 bull and 2 cows. (The bull is "2", the cows are "4" and "1".) <br><br>Have fun!
                 </p>
             </div>
         </div>
