--- a/CowsBulls/index.html
+++ b/CowsBulls/index.html
@@ -24,7 +24,14 @@
         <div class="result">
             <div class="rules">
                 <p> I have 4-digit secret number. <br> <br>You can try to guess it, just print your version in input field.<br> <br> I'll give you some hint, what is my number. If the matching digits are in their right positions, they are <b> "bulls"</b>,
-                    if in different positions, they are <b>"cows"</b> . <br> <br>Example: <br>Secret number: 4271 <br> Your try: 1234 <br><br> Answer: 1 bull and 2 cows. (The bull is "2", the cows are "4" and "1".) <br><br>Have fun!
+                    if in different positions, they are <b>"cows"</b> . <br> <br>Example: <br>Secret number: 5874 <br> Your try: 5678 <br><br> Answer:
+                    <div class="result__el">
+                        <span class="result__num">5678</span>
+                        <span class="result__bull"></span>
+                        <span class="result__cow"></span> <span class="result__cow"></span>
+                    </div>
+
+                    1 bull and 2 cows. (The bull is "5", the cows are "7" and "8".) <br><br>Have fun!
                 </p>
             </div>
         </div>
