--- a/CowsBulls/index.html
+++ b/CowsBulls/index.html
@@ -37,7 +37,10 @@
         </div>
 
     </div>
-
+    <!--div class="popup">
+        <span class="popup__title">You win!</span>
+        <button class="popup__btn">New game</button>
+    </div-->
 </body>
 <script src="js/main.js"></script>
 
